@@ -129,6 +129,25 @@ _match_done:
 	jump _next_instruction;
 
 _new_instruction:
+	/* The table is generated in memory and can be extracted:
+	   (gdb) dump binary memory bin &table next_location
+
+	   16bit:
+	   $ od -j6 -x --width=4 bin | \
+	     awk '{ s=last; e=strtonum("0x"$2); \
+	       printf "\t.dw 0x%04x,\t0x%04x,\t\t0x%02x\n", \
+	          s, e-1, strtonum("0x"seq); \
+	       last=e; seq=$3}'
+
+	   32bit:
+	   $ od -j12 -x --width=8 bin | \
+	     awk '{ s=last; e=strtonum("0x"$3$2); \
+	       printf "\t.dw 0x%04x, 0x%04x,\t0x%04x, 0x%04x,\t\t0x%02x, 0\n", \
+	          and(s,0xffff), rshift(s,16), and(e-1,0xffff), rshift(e-1,16), \
+	          strtonum("0x"seq); \
+	       last=e; seq=$3}'
+
+	   This should be much faster than dumping over serial/jtag.  */
 	se_all_new_insn_stub
 
 	/* output the insn (R0) and excause (R3) if diff from last */
