@@ -1,5 +1,9 @@
 2013-06-17  Mike Frysinger  <vapier@gentoo.org>
 
+	* se_allopcodes.h: Add debugging related comments.
+
+2013-06-17  Mike Frysinger  <vapier@gentoo.org>
+
 	* se_allopcodes.h: Do not clear RETN/RETE/RETI.
 
 2012-04-09  Robin Getz  <robin.getz@analog.com>
